--- a/source.ipynb
+++ b/source.ipynb
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "f0d43fc6",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
     }
    ],
    "source": [
-    "model.save('churn_model.h5')"
+    "model.save('grip_model.h5')"
    ]
   },
   {
